--- a/CommnuitySW2/src/main/webapp/resources/css/main.css
+++ b/CommnuitySW2/src/main/webapp/resources/css/main.css
@@ -112,3 +112,78 @@ div{
 	border-style:solid;
 	border-color:black;
 }
+
+.login-head-area{
+	display:block;
+	padding:10px;
+	margin-bottom:10px;
+	background-color:black;
+	height:40px;
+	
+}
+
+.login-font{
+	font-size:40px;
+	font-weight:bold;
+	text-align:center;
+}
+
+.login-area1{
+	padding:20px;
+	margin-top:10px;
+	margin-bottom:10px;
+	background-color:lightgrey;
+	display:block;
+}
+
+.login-area2{
+	display:flex;
+	align-items:center;
+	justify-content:center;
+	flex-direction:column;
+	position:relative;
+	width:100%;
+	padding:10px;
+}
+
+.login-area3{
+	display:flex;
+	align-items:center;
+	justify-content:center;
+	flex-direction:row;
+	position:relative;
+	width:100%;
+	padding:10px;
+}
+
+input{
+	width:400px;
+  	height:50px;
+  	font-size:20px;
+  	margin:10px;
+  	padding:10px;
+  	outline:none;
+}
+
+.ip-div{
+  	outline:none;
+  	background:linear-gradient(to left, rgb(255, 255, 255), rgb(255, 255, 255));
+  	border-radius:5px;
+  	box-shadow:3px 3px 10px rgba(0,0,0,0.1);
+}
+
+.bt{
+	width:425px;
+  	height:50px;
+  	font-size:20px;
+  	margin:10px;
+  	padding:10px;
+}
+
+.bt-join{
+	display:block;
+	margin:10px;
+	padding:10px;
+	font-size:20px;
+	float:left;
+}
