--- a/CommnuitySW2/src/main/webapp/resources/css/main.css
+++ b/CommnuitySW2/src/main/webapp/resources/css/main.css
@@ -1,189 +1,80 @@
-@charset "UTF-8";
+body {
+  background-size: 100%;
+  font-size: 1rem;
+}
 
 div{
 	display:block;
-	overflow-x:hidden;
-	overflow-y:hidden;
 }
 
-.sc{
-	overflow-x:hidden;
-	overflow-y:hidden;
+#loginBoxTitle {
+  color:#000000;
+  font-weight: bold;
+  font-size: 3rem;
+  text-transform: uppercase;
+  padding: 5px;
+  margin-bottom: 20px;
+  background: linear-gradient(to right, #270a09, #8ca6ce);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-.header{
-	display:inline-block; 
-	width:680px; 
-	text-align:left; 
-	font-size:60px; 
-	font-weight:bold;
+input[type="button"] {
+  font-size: 1rem;
+  padding: 5px 10px;
 }
 
-.header2{
-	display:inline-block;
-	text-align:right;
-	font-size:20px;
+.login-box {
+  margin:200px auto;
+  justify-content:center;
+  background-color: rgba(255, 255, 255, 1);
+  border-radius: 10px;
+  padding:40px 30px;
+  border:3px solid lightgrey; 
+  width:500px;
+  filter: drop-shadow(0px 0px 8px rgba(0,0,0,.5));
+  text-align:center;
 }
 
-.head-area{
-	display:block;
-	padding:10px;
-	margin-bottom:10px;
-	background-color:black;
-	height:100px;
-	
+.join-box {
+  margin:80px auto;
+  justify-content:center;
+  background-color: rgba(255, 255, 255, 1);
+  border-radius: 10px;
+  padding:40px 30px;
+  border:3px solid lightgrey; 
+  width:500px;
+  filter: drop-shadow(0px 0px 8px rgba(0,0,0,.5));
+  text-align:center;
 }
 
-.group-area{
-	float: left;
-	text-align:left;
+.form-group label {
+  font-size: 1rem;
+  margin:5px 0;
+  padding:5px;
+  width:100%;
+  text-align:left;
 }
 
-
-.group1{
-	margin-bottom:10px;
-	padding:10px;
-	line-height:40px;
-	background-color: lightgrey;
-	display:block;
-	height:200px;
+#login-btn-box{
+  align-items: center;
+  margin-top:10px;
+  background-color:black;
+  color:white;
+  border-radius:5px;
+  width:100%;
+  padding:10px;
 }
 
-.write{
-	display: block;
-	margin-top:10px;
-	margin-bottom:10px;
-	padding:10px;
-    line-height: 30px;
-    text-align: center;
-    background-color: black;
-}
-
-.write2{
-	display:block;
-	text-align:center; 
-	font-size:25px; 
-	font-weight:bold;
-}
-
-.main-area{
-	position:absolute;
-	margin-left:10px;
-	border-style:solid;
-	border-color:black;
-	display:inline-block;
-	height:850px;
-}
-
-.main-area2{
-	margin:10px;
-	border-style:solid;
-	border-color:black;
-	float:left;
-	display:block;
-	width:50vh;
-	height:825px;
-}
-
-.main-area3{
-	margin-top:10px;
-	margin-right:10px;
-	border-style:solid;
-	border-color:black;
-	display:block;
-	width:50vh;
-	height:42.7vh;
-}
-
-.kcal{
-	display:inline-block;
-	text-align:center; 
-	font-size:20px; 
-	font-weight:bold; 
-	padding:10px;
-}
-
-.footer{
-	display:block;
-	background-color:black;
-	height:100px;
-	margin-top:10px;
-	padding:10px;
-	border-style:solid;
-	border-color:black;
-}
-
-.login-head-area{
-	display:block;
-	padding:10px;
-	margin-bottom:10px;
-	background-color:black;
-	height:40px;
-	
-}
-
-.login-font{
-	font-size:40px;
-	font-weight:bold;
-	text-align:center;
-}
-
-.login-area1{
-	padding:20px;
-	margin-top:10px;
-	margin-bottom:10px;
-	background-color:lightgrey;
-	display:block;
-}
-
-.login-area2{
-	display:flex;
+.ot-btn{
+  	justify-content:center;
 	align-items:center;
-	justify-content:center;
-	flex-direction:column;
-	position:relative;
-	width:100%;
-	padding:10px;
+	margin-top:20px;
+	display:inline-block;
 }
 
-.login-area3{
-	display:flex;
+.ot-btn-in{
 	align-items:center;
-	justify-content:center;
-	flex-direction:row;
-	position:relative;
-	width:100%;
-	padding:10px;
-}
-
-input{
-	width:400px;
-  	height:50px;
-  	font-size:20px;
-  	margin:10px;
-  	padding:10px;
-  	outline:none;
-}
-
-.ip-div{
-  	outline:none;
-  	background:linear-gradient(to left, rgb(255, 255, 255), rgb(255, 255, 255));
-  	border-radius:5px;
-  	box-shadow:3px 3px 10px rgba(0,0,0,0.1);
-}
-
-.bt{
-	width:425px;
-  	height:50px;
-  	font-size:20px;
-  	margin:10px;
-  	padding:10px;
-}
-
-.bt-join{
-	display:block;
 	margin:10px;
-	padding:10px;
-	font-size:20px;
-	float:left;
+	display:inline-block;
 }
