--- a/CommnuitySW2/src/main/webapp/resources/css/main.css
+++ b/CommnuitySW2/src/main/webapp/resources/css/main.css
@@ -56,7 +56,7 @@ input[type="button"] {
   text-align:left;
 }
 
-#login-btn-box{
+.login-btn-box{
   align-items: center;
   margin-top:10px;
   background-color:black;
