--- a/CommnuitySW2/src/main/webapp/resources/css/main.css
+++ b/CommnuitySW2/src/main/webapp/resources/css/main.css
@@ -106,3 +106,9 @@ input[type="button"] {
 	width:50%;
 	padding:5px;
 }
+
+.table-header{
+	background-color: #A9A9A9;
+	font-weight:bold;
+	width:150px;
+}
