친구삭제 기능이랑 session 다른 기능들이랑 맞추는거 구현했습니다

--- a/CommnuitySW2/src/main/webapp/resources/css/main.css
+++ b/CommnuitySW2/src/main/webapp/resources/css/main.css
@@ -103,7 +103,14 @@ input[type="button"] {
 .div-fl{
 	float:left;
 	display:block;
-	width:50%;
+	width:60%;
+	padding:5px;
+}
+
+.div-fr{
+	float:left;
+	display:block;
+	width:40%;
 	padding:5px;
 }
 
